Add tuna noodle image, description, and ingredients

--- a/recipes/tuna-noodle.html
+++ b/recipes/tuna-noodle.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tuna noodle</title>
 </head>
 <body>
     <h1>Tuna Noodle</h1>
+    <img src="../images/Tuna-Noodle-Casserole-720x540.jpg" alt="Tuna noodle casserole">
+
+    <h2>Description</h2>
+    <p>This tuna noodle casserole is the best with a classic creamy taste from my childhood. 
+        The sauce is rich and creamy but not overwhelmingly heavy. 
+        The crunch from the topping and fresh bite from the parsley create the perfect balance. 
+        Let's not forget that this is a great budget-friendly meal to feed a crowd!
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (12 ounce) package egg noodles</li>
+        <li>4 1/4 teaspoons kosher salt, divided</li>
+        <li>4 tablespoons salted butter, divided</li>
+        <li>5 teaspoons olive oil, divided</li>
+        <li>1 (8 ounce) package sliced fresh mushrooms</li>
+        <li>1 small white onion, minced</li>
+        <li>1/4 cup all-purpose flour</li>
+        <li>2 cups milk</li>
+        <li>1 1/2 cups chicken stock</li>
+        <li>2 tablespoons lemon juice</li>
+        <li>1 teasppon Dijon mustard</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1 1/2 cups shredded white cheddar cheese</li>
+        <li>1 cup frozen sweet peas</li>
+        <li>2 (6 ounce) cans tuna, drained</li>
+        <li>1 cup panko bread crumbs</li>
+        <li>1/4 teaspoon ground paprika</li>
+        <li>2 tablespoons finely chopped fresh parsley</li>
+    </ul>
+
 </body>
 </html>
