Add tuna steps for recipe

--- a/recipes/tuna-noodle.html
+++ b/recipes/tuna-noodle.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Tuna Noodle</h1>
     <img src="../images/Tuna-Noodle-Casserole-720x540.jpg" alt="Tuna noodle casserole">
-
+    <!-- Description -->
     <h2>Description</h2>
     <p>This tuna noodle casserole is the best with a classic creamy taste from my childhood. 
         The sauce is rich and creamy but not overwhelmingly heavy. 
@@ -17,6 +17,7 @@
         Let's not forget that this is a great budget-friendly meal to feed a crowd!
     </p>
 
+    <!-- List of ingredients -->
     <h2>Ingredients</h2>
     <ul>
         <li>1 (12 ounce) package egg noodles</li>
@@ -38,6 +39,26 @@
         <li>1/4 teaspoon ground paprika</li>
         <li>2 tablespoons finely chopped fresh parsley</li>
     </ul>
+
+    <!-- List of steps to make recipe -->
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch baking dish.
+        </li>
+        <li>Bring a large pot of water to a boil. Add egg noodles and 3 teaspoons salt to the boiling water; 
+        cook until tender yet firm to the bite, about 6 minutes. Drain noodles. Return to pot and set aside.
+        </li>
+        <li>Heat 2 tablespoons butter and 1 tablespoon oil in a large skillet over              medium-high heat. 
+            Add mushrooms and onion and cook until mushrooms are softened and onions are translucent, about 4 minutes. 
+            Add remaining butter; stir constantly until melted. Sprinkle flour over vegetable mixture and cook, stirring constantly, for 1 minute. 
+            Stir in milk and stock and bring to a simmer, stirring often. Simmer for 5 minutes. 
+            Stir in lemon juice, Dijon mustard, 1 teaspoon salt, and pepper.
+        </li>
+        <li>Add sauce mixture to reserved noodles. Stir in 1 cup Cheddar cheese, peas, and tuna. Pour mixture into the prepared baking dish and sprinkle remaining Cheddar cheese over the top.
+        </li>
+        <li>Stir together bread crumbs, remaining 2 teaspoons oil, remaining 1/4 teaspoon salt, and paprika in a small bowl. Sprinkle bread crumb mixture evenly over the casserole.</li>
+        <li>Bake in the preheated oven until golden and bubbly, 25 to 30 minutes. Sprinkle with parsley and serve.</li>
+    </ol>
 
 </body>
 </html>
