Add guacamole recipe

--- a/recipes/tuna-noodle.html
+++ b/recipes/tuna-noodle.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Tuna Noodle</h1>
     <img src="../images/Tuna-Noodle-Casserole-720x540.jpg" alt="Tuna noodle casserole">
+
+    <a href="../index.html">Home</a>
+    
     <!-- Description -->
     <h2>Description</h2>
     <p>This tuna noodle casserole is the best with a classic creamy taste from my childhood. 
