--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/tuna-noodle.html">Tuna Noodle</a>
+    <ul>
+        <li><a href="recipes/tuna-noodle.html">Tuna Noodle</a></li>
+        <li><a href="recipes/guacamole.html">Guacamole</a></li>
+    </ul>
+    
 
 </body>
 </html>
