--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/tuna-noodle.html">Tuna Noodle</a></li>
         <li><a href="recipes/guacamole.html">Guacamole</a></li>
+        <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
     </ul>
     
 
