Add css to style every page

--- a/recipes/buffalo-chicken-dip.html
+++ b/recipes/buffalo-chicken-dip.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buffalo chicken dip</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Buffalo chicken dip</h1>
-    <img src="../images/buffalo-chicken-dip.jpeg" alt="buffalo chicken">
+    <h1 class="mainHeader">Buffalo chicken dip</h1>
+    <div class="centered">
+        <img class="img" src="../images/buffalo-chicken-dip.jpeg" alt="buffalo chicken">
+    </div>
+    
 
     <!-- Description -->
-    <h2>Description</h2>
-    <p>Few appetizers bring a crowd together quite like warm, ooey-gooey, utterly irresistible Buffalo chicken dip. </p>
+    <h2 class="centered">Description</h2>
+    <p class="centered">Few appetizers bring a crowd together quite like warm, ooey-gooey, utterly irresistible Buffalo chicken dip. </p>
 
 
     <!-- List of ingredients -->
-    <h2>Ingredients</h2>
+    <h2 class="centered">Ingredients</h2>
     <ul>
         <li>2 (10 ounce) cans chunk chicken, drained</li>
         <li>¾ cup hot pepper sauce (such as Frank's RedHot®)</li>
@@ -28,7 +32,7 @@
     </ul>
 
     <!-- List of steps to make recipe -->
-    <h2>Steps</h2>
+    <h2 class="centered">Steps</h2>
     <ol>
         <li>Heat chicken and hot pepper sauce in a skillet over medium heat until heated through, 3 to 5 minutes. Stir in cream cheese and ranch dressing. Cook and stir until well blended and warm, 3 to 5 minutes.</li>
         <li>Mix in 1/2 of the Cheddar cheese, and transfer the mixture to a slow cooker. Sprinkle the remaining cheese over top.</li>
