--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guacamole</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Guacamole</h1>
-    <img src="../images/guacamole.jpeg" alt="guacamole">
-
+    <h1 class="mainHeader">Guacamole</h1>
+    <div class="centered">
+        <img class="img" src="../images/guacamole.jpeg" alt="guacamole">
+    </div>
+    
     <!-- Description -->
-    <h2>Description</h2>
-    <p>Guacamole is an avocado-based dip or spread that originated in Mexico. It's typically made with mashed avocado and lime juice, then seasoned with salt and cilantro. Guacamole often contains tomatoes and onions.
+    <h2 class="centered">Description</h2>
+    <p class="centered">Guacamole is an avocado-based dip or spread that originated in Mexico. It's typically made with mashed avocado and lime juice, then seasoned with salt and cilantro. Guacamole often contains tomatoes and onions.
     </p>
 
     <!-- List of ingredients -->
-    <h2>Ingredients</h2>
+    <h2 class="centered">Ingredients</h2>
     <ul>
         <li>3 avocados - peeled, pitted, and mashed</li>
         <li>1 lime, juiced</li>
@@ -29,7 +32,7 @@
     </ul>
 
     <!-- List of steps to make recipe -->
-    <h2>Steps</h2>
+    <h2 class="centered">Steps</h2>
     <ol>
         <li>Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Stir in cayenne pepper.</li>
         <li>Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>
