--- a/recipes/tuna-noodle.html
+++ b/recipes/tuna-noodle.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuna noodle</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tuna Noodle</h1>
-    <img src="../images/Tuna-Noodle-Casserole-720x540.jpg" alt="Tuna noodle casserole">
-
-    <a href="../index.html">Home</a>
+    <h1 class="mainHeader">Tuna Noodle</h1>
+    <div class="centered">
+        <img class="img" src="../images/Tuna-Noodle-Casserole-720x540.jpg" alt="Tuna noodle casserole">
+    </div>
+    
     
     <!-- Description -->
-    <h2>Description</h2>
-    <p>This tuna noodle casserole is the best with a classic creamy taste from my childhood. 
+    <h2 class="centered">Description</h2>
+    <p class="centered">This tuna noodle casserole is the best with a classic creamy taste from my childhood. 
         The sauce is rich and creamy but not overwhelmingly heavy. 
         The crunch from the topping and fresh bite from the parsley create the perfect balance. 
         Let's not forget that this is a great budget-friendly meal to feed a crowd!
     </p>
 
     <!-- List of ingredients -->
-    <h2>Ingredients</h2>
+    <h2 class="centered">Ingredients</h2>
     <ul>
         <li>1 (12 ounce) package egg noodles</li>
         <li>4 1/4 teaspoons kosher salt, divided</li>
@@ -44,7 +46,7 @@
     </ul>
 
     <!-- List of steps to make recipe -->
-    <h2>Steps</h2>
+    <h2 class="centered">Steps</h2>
     <ol>
         <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch baking dish.
         </li>
