--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Odin recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="centered">Odin Recipes</h1>
+    
     <ul>
         <li><a href="recipes/tuna-noodle.html">Tuna Noodle</a></li>
         <li><a href="recipes/guacamole.html">Guacamole</a></li>
         <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
     </ul>
     
-
 </body>
 </html>
